--- a/multisla/src/main/resources/templates/carbuild/modelY.html
+++ b/multisla/src/main/resources/templates/carbuild/modelY.html
@@ -29,6 +29,17 @@
 }
 </style>
 <script th:inline="javascript">
+// 가격 계산 함수
+function getprice(mid, colid, wid, iid) {
+	$.ajax({
+		url:'/getprice',
+		data:{'mid':mid, 'colid':colid, 'wid':wid, 'iid':iid},
+		success:function(data){
+			$('#price').text(data);
+			console.log(data);
+		}
+	});
+}
 // 쿠키 저장 함수
 function setCookie(cname, cvalue, exdays) {
 	const d = new Date();
@@ -38,10 +49,17 @@ function setCookie(cname, cvalue, exdays) {
 }
 
 $(document).ready(function(){
+	// change image by clicking options
+	var m = 101;
+	var c = $('input[name="colid"]:checked').val();
+	var w = $('input[name="wid"]:checked').val();
+	var i = $('input[name="iid"]:checked').val();
 	$("#carimg").attr('src', 'assets/images/carbuild/modely/modely_black_w19.png')
+	getprice(m,c,w,i);
 	$('input[name="colid"], input[name="wid"]').click(function(){
-		var c = $('input[name="colid"]:checked').val();
-		var w = $('input[name="wid"]:checked').val();
+		c = $('input[name="colid"]:checked').val();
+		w = $('input[name="wid"]:checked').val();
+		i = $('input[name="iid"]:checked').val();
 		$('#carimg').attr('width','auto');
 		if (c == 200) {
 			if (w == 300) {
@@ -76,10 +94,13 @@ $(document).ready(function(){
 				$("#carimg").attr('src', 'assets/images/carbuild/modely/modely_blue_w21.png').fadeIn(300);
 			}
 		};
+		getprice(m,c,w,i);
 	});
 	
 	$('input[name="iid"]').click(function(){
-		var i = $('input[name="iid"]:checked').val();
+		c = $('input[name="colid"]:checked').val();
+		w = $('input[name="wid"]:checked').val();
+		i = $('input[name="iid"]:checked').val();
 		$("#carimg").attr('width','1400px');
 		if (i == 400) {
 			$("#carimg").fadeOut(100);
@@ -88,6 +109,7 @@ $(document).ready(function(){
 			$("#carimg").fadeOut(100);
 			$("#carimg").attr('src','assets/images/carbuild/modely/modely_white_interior.jpg').fadeIn(300);
 		};
+		getprice(m,c,w,i);
 	});
 	
 	$('#togarage').click(function(){
@@ -110,7 +132,6 @@ $(document).ready(function(){
 			if (result) {
 				location.href = '/buildlogin';
 			}
-			//$('#togarage').attr('href','/buildlogin');
 		}else {
 			// 로그인 정보가 있을 때
 			// carbuild와 garage에 register하고
@@ -256,6 +277,32 @@ $(document).ready(function(){
 							</div>
 						</label>
 					</div>	
+					<div class="col-sm-3 text-center"></div>
+				</div>
+			
+				<!-- 가격 표시 -->
+				<div class="selectbox">
+					<div class="tittle-margin">
+						<h3 class="text-black text-center"> 예상 가격 </h3>
+					</div>
+					<div class="col-sm-3 text-center"></div>
+					<div class="col-sm-6 text-center">
+						<section>
+						    <div class="overlay"></div>
+						    <div class="container">
+						        <div class="row">
+									<div class="main_counter text-center">
+									    <div class="col-md-2">
+									        <div class="counter_item">
+									            <h2 class="statistic-counter" id="price"></h2>
+									            <h2>&#8361;</h2>
+									        </div>
+									    </div>
+									</div>
+						        </div><!--End off row-->
+							</div><!--End off container -->
+						</section> <!--End off Home Sections-->
+					</div>
 					<div class="col-sm-3 text-center"></div>
 				</div>
 			
