--- a/multisla/src/main/resources/templates/carbuild/modelS.html
+++ b/multisla/src/main/resources/templates/carbuild/modelS.html
@@ -11,13 +11,6 @@
 .tittle-margin{
 	margin-bottom: 30px;	
 }
-#circle60{
-	width:60px; height:60px;   
-}
-#circle55{
-	width:55px; height:55px;   
-}
-
 .labelexpanded > input{
 	display:none;	
 }
@@ -246,7 +239,7 @@ $(document).ready(function(){
 						<label class="labelexpanded" for="iblack">
 							<input type="radio" name="iid" value="400" id="iblack" checked="checked">
 							<div class="radio-btns">
-								<img src="assets/images/3-black.png" class="img-circle" alt="inte_Black" id="circle60">
+								<img src="assets/images/3-black.png" class="img-circle" alt="inte_Black">
 							</div>
 						</label>
 					</div>
@@ -254,7 +247,7 @@ $(document).ready(function(){
 						<label class="labelexpanded" for="iwhite">
 							<input type="radio" name="iid" value="401" id="iwhite">
 							<div class="radio-btns">
-								<img src="assets/images/3-white.png" class="img-circle" alt="inte_white" id="circle60">
+								<img src="assets/images/3-white.png" class="img-circle" alt="inte_white">
 							</div>
 						</label>
 					</div>	
