modify page can only be accessed by the owner of the account

--- a/multisla/src/main/resources/templates/detail/modelYdetail.html
+++ b/multisla/src/main/resources/templates/detail/modelYdetail.html
@@ -101,11 +101,11 @@
 				<b>Top Safety Pick+</b><br>
 				Model Y는 모든 충돌 내구성 및 전면 충돌 방지 범주에서 최고 등급으로 IIHS Top Safety Pick+를 수상했습니다.</p>
 	       </div>		            	
-	       <div class="selectbox2">
-		       <div class="pricing_btn m-top-20">
-		             <a href="/buildmodely" class="btn btn-primary">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
-		       </div>
-	       </div>
+	       <div class="feature_photo wow fadeInUp col-md-3">
+		        <div class="pricing_btn m-top-20">
+	                   <a href="/buildmodely" class="btn btn-primary">지금 주문하기<i class="fa fa-long-arrow-right"></i></a>
+	               </div>
+		    </div>
     	</div>
 	</div>
 </section> <!--End off Safety Sections-->
