--- a/multisla/src/main/resources/templates/carbuild/modelX.html
+++ b/multisla/src/main/resources/templates/carbuild/modelX.html
@@ -20,6 +20,7 @@
 	border-radius: 50%;
 	border-color: #4374D9;
 }
+
 </style>
 <script th:inline="javascript">
 // 가격 계산 함수
@@ -145,12 +146,11 @@ $(document).ready(function(){
 <div id="div-top" class="container-fluid">
 	<div class="row">
 		<!-- 왼쪽 이미지 영역 -->
-		<div class="col-sm-9">
+		<div class="col-sm-9  p-bottom-50">
 			<img src="assets/images/carbuild/modelx/modelx_black.png" id="carimg">
 		</div>
 		<!-- detail 선택 후 주문하기 -->
-		<div style="postion:fixed;">
-		<div class="col-sm-3" id="caroption">
+		<div class="col-sm-3" id="caroption" style="background-color:white;">
 		
 			<!-- 모델명 및 사양 -->   
 			<div class="selectbox">
@@ -312,7 +312,6 @@ $(document).ready(function(){
 				</div>
 			</form>
 		</div>
-		</div>	
 	</div>
 </div>
 
