--- a/multisla/src/main/resources/templates/carbuild/login.html
+++ b/multisla/src/main/resources/templates/carbuild/login.html
@@ -31,48 +31,45 @@ $(document).ready(function(){
 
 
 <div id="div-top" class="container-fluid">
- 	<div class="col-sm-4">
- 	</div>
-  	<div class="col-sm-4" >
+ 	<div class="col-sm-4"></div>
+  	<div class="col-sm-4">
 		<div class="container">
 		  	<h2>로그인</h2>
 		  	
 			<form class="form-horizontal" id="login_form" action="loginimpl" method="POST">
-		   		<div class="form-group">
-		      		<label class="control-label col-sm-2" for="id">ID: </label>
-		      		<div class="col-sm-3">
-		        		<input type="text" class="form-control" id="uid" placeholder="Enter ID" name="uid">
-		      		</div>
-		    	</div>
-		    	<div class="form-group">
-		      		<label class="control-label col-sm-2" for="pwd">Password:</label>
-		     		<div class="col-sm-3">          
-		        		<input type="password" class="form-control" id="upwd" placeholder="Enter password" name="upwd">
-		     		</div>
-		    	</div>
-		    	<div class="form-group">        
-		      		<div class="col-sm-offset-2 col-sm-3">
+				<div class="form-group">
+					<label class="control-label col-sm-2" for="id">ID: </label>
+					<div class="col-sm-3">
+						<input type="text" class="form-control" id="uid" placeholder="Enter ID" name="uid">
+					</div>
+				</div>
+				
+				<div class="form-group">
+					<label class="control-label col-sm-2" for="pwd">Password:</label>
+					<div class="col-sm-3">          
+						<input type="password" class="form-control" id="upwd" placeholder="Enter password" name="upwd">
+					</div>
+				</div>
+				
+				<div class="form-group">        
+					<div class="col-sm-offset-2 col-sm-3">
+						<span id="cspan" th:text="${msg}"></span>
+						<button class="btn btn-info btn-user btn-block" id="login_btn">로그인</button><br>
+					</div>
+				</div>
+			</form>
+			
+			<div class="form-group">        
+				<div class="col-sm-offset-2 col-sm-3">
+					<hr>
+					<p>계정이 없다면?</p>
+					<a class="btn btn-default btn-user btn-block" id="register_btn">계정생성하기</a><br>
+				</div>
+			</div>
 
-		      			<span id="cspan" th:text="${msg}"></span>
-		      			
-
-		       			<button class="btn btn-info btn-user btn-block" id="login_btn">로그인</button><br>
-		      		</div>
-		    	</div>
-			 </form>
-			 <div class="form-group">        
-	      		<div class="col-sm-offset-2 col-sm-3">
-	      			<hr>
-	      			<p>계정이 없다면?</p>
-	       			<a class="btn btn-default btn-user btn-block" id="register_btn">계정생성하기</a><br>
-	      		</div>
-
-	    	</div>
-
-		    </div>
 		</div>
-    <div class="col-sm-4">
-	</div>  
+	</div>
+    <div class="col-sm-4"></div>  
 </div>
 
 
