--- a/multisla/src/main/resources/templates/carbuild/modelS.html
+++ b/multisla/src/main/resources/templates/carbuild/modelS.html
@@ -149,7 +149,7 @@ $(document).ready(function(){
 		</div>
 	   
 		<!-- detail 선택 후 주문하기 -->
-		<div class="col-sm-3" id="caroption">
+		<div class="col-sm-3" id="caroption" style="background-color:white;">
 		
 			<!-- 모델명 및 사양 -->   
 			<div class="selectbox">
@@ -309,8 +309,8 @@ $(document).ready(function(){
 									<div class="main_counter text-center">
 									    <div class="col-md-2">
 									        <div class="counter_item">
-										            <h2 class="statistic-counter" id="price"></h2>
-										            <h2>&#8361;</h2>
+										            <h3 class="statistic-counter" id="price"></h3>
+										            <h3>&#8361;</h3>
 									        </div>
 									    </div>
 									</div>
