--- a/multisla/src/main/resources/templates/garage/garagedetail.html
+++ b/multisla/src/main/resources/templates/garage/garagedetail.html
@@ -71,7 +71,7 @@ margin:auto;
                                     	
                                         <div class="col-md-6 text-left"> 
                                         	                                     
-                                            <h4 th:text="'견적가 : '+${ugarage.price}" >  </h4>   
+                                            <h4 th:text="'견적가 : ₩'+${ugarage.price}" >  </h4>   
                                         </div>
                                     </div>
                                 </div>
