--- a/multisla/src/main/resources/templates/orders.html
+++ b/multisla/src/main/resources/templates/orders.html
@@ -65,6 +65,7 @@
 	    			'action':'ordersimpl'
 	    		});
 	    		$('.form-horizontal').submit();
+	    		alert('주문이 완료되었습니다. 내 차고로 이동합니다.');
 	    		
 	    	});
 	      //전화번호 유효성 검사
