--- a/multisla/src/main/resources/templates/index.html
+++ b/multisla/src/main/resources/templates/index.html
@@ -95,9 +95,9 @@
                         </ul>
                         <ul class="nav navbar-nav navbar-right" th:unless="${session.loginusers == null}">  
                             <li class="dropdown sm-m-top-20">
-                                <a href="#" th:href="@{garage(uid=${session.loginusers.uid})}" class="dropdown-toggle" data-toggle="dropdown" >
+                                <a href="#" th:href="@{garage(uid=${session.loginusers.uid})}" class="dropdown-toggle" data-toggle="dropdown">
                                     <i class="fa fa-shopping-bag"></i>
-                                    <span class="badge">3</span>
+                                    <span class="badge" th:each="g : ${cartlist}" th:if="${session.loginusers.uid == g.uid}" th:text="${cartlist.size}">2</span>
                                 </a>
                                 <ul class="dropdown-menu cart-list">
                                     <li th:each="g : ${cartlist}" th:if="${session.loginusers.uid == g.uid}">
@@ -107,8 +107,7 @@
                                     </li>
                                     <!---- More List ---->
                                     <li class="total">
-                                        <span class="pull-right"><strong>Total</strong>: $0.00</span>
-                                        <a th:href="@{garage(uid=${session.loginusers.uid})}" class="btn btn-cart">Cart</a>
+                                        <a th:href="@{garage(uid=${session.loginusers.uid})}" class="btn btn-cart">내 차고 보기</a>
                                     </li>
                                 </ul>
                             </li>
