--- a/multisla/src/main/resources/templates/index.html
+++ b/multisla/src/main/resources/templates/index.html
@@ -145,7 +145,7 @@
 							<li><a href="/models">MODEL S</a></li> 							                   
                             <li><a href="/modelx">MODEL X</a></li> 							
                             <li><a href="/modely">MODEL Y</a></li>                                      
-							<li><a th:href="logout">lOGUOT</a></li>                
+							<li><a th:href="logout">lOGOUT</a></li>                
                         </ul>
                        
                         
