--- a/multisla/src/main/resources/templates/ordersdetail.html
+++ b/multisla/src/main/resources/templates/ordersdetail.html
@@ -54,7 +54,7 @@
 		<section id="blog_details" class="blog_details roomy-100">
 			<div class="container">
 				<div class="row">
-					<div>
+					<div style="margin-left:10%; margin-right:10%;">
 						<div class="blog_saidbar sm-m-top-70">
 							<div class="said_ctg fix">
 								<h3 class="text-uppercase">주문상태</h3>
@@ -71,8 +71,7 @@
 								</ul>                                
 							</div>
 						</div>
-					</div>
-					<div>
+<br><br>
 						<div class="blog_saidbar sm-m-top-70">
 							<div class="said_ctg fix">
 								<h3 class="text-uppercase">주문서</h3>
@@ -96,19 +95,19 @@
 									    <span  class="pull-right" th:text="${o.shipphone}"></span>								   
 								    </li>
 								    
-  								    <li>   <label class="col-md-1" style="font-size=30px">모델</label>
+  								    <li>   <label class="col-md-2" style="font-size=30px">모델</label>
 									    <span  class="pull-center " th:text="${m.mname}"></span>
 									    <span  class="pull-right" data-th-text="'&#8361;'+${#numbers.formatInteger(m.mprice, 0, 'COMMA')}"></span>
 								    </li>  
-   								    <li>  <label class="col-md-1" style="font-size=30px">색상</label>
+   								    <li>  <label class="col-md-2" style="font-size=30px">색상</label>
 									    <span  class="pull-center" th:text="${c.coloption}"></span>
 									    <span  class="pull-right" data-th-text="'&#8361;'+${#numbers.formatInteger(c.colprice, 0, 'COMMA')}"></span>
 								    </li>  
-   								    <li>   <label class="col-md-1" style="font-size=30px">휠</label>
+   								    <li>   <label class="col-md-2" style="font-size=30px">휠</label>
 									    <span  class="pull-center" th:text="${w.woption} + '인치'"></span>
 									    <span  class="pull-right" data-th-text="'&#8361;'+${#numbers.formatInteger(w.wprice, 0, 'COMMA')}"></span>
 								    </li>
-   								    <li>   <label class="col-md-1" style="font-size=30px">인테리어</label>
+   								    <li>   <label class="col-md-2" style="font-size=30px">인테리어</label>
 									    <span  class="pull-center" th:text="${i.ioption}"></span>
 									    <span  class="pull-right" data-th-text="'&#8361;'+${#numbers.formatInteger(i.iprice, 0, 'COMMA')}"></span>
 								    </li>       
