Account Validation for garage, garage detail

--- a/multisla/src/main/resources/templates/garage/modify.html
+++ b/multisla/src/main/resources/templates/garage/modify.html
@@ -123,6 +123,7 @@ $(document).ready(function(){
 					<input type="hidden" th:value="${session.loginusers.uid}" name="uid">
 					<input type="hidden" th:value=${car.codeno} name="codeno">
 					<input type="hidden" th:value="${m.mid}" name="mid">
+					<input type="hidden" th:value="${g.gid}" name="gid">
 				<!-- 모델명 -->
 				
 					<!-- 색상 -->
