--- a/multisla/src/main/resources/templates/garage/garage.html
+++ b/multisla/src/main/resources/templates/garage/garage.html
@@ -1,59 +1,63 @@
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <meta charset="utf-8">
-
-
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-            <!--Portfolio Section-->
-            <section id="gallery" class="gallery margin-top-120 bg-white">
-                <!-- Portfolio container-->
-                <div class="container">
-                    <div class="row">
-                        <div class="main-gallery main-model roomy-80">
-                            <div class="col-md-12 m-bottom-60">
-                                <div class="filters-button-group sm-text-center">
-                                    <button class="button is-checked" data-filter="*">View all</button>
-                                    <button class="button" data-filter=".S">MODEL S</button>
-                                    <button class="button" data-filter=".X">MODEL X</button>
-                                    <button class="button" data-filter=".Y">MODEL Y</button>
-                                   
-                                </div>
-                            </div>
 
-                            <div style="clear: both;"></div>
-				
-		
-                            <!--
-                             각각의 codeno 이미지를 each로 돌리고
-                             view detail을 누르면 gid의 garagedetail 페이지로 이동
-                             
-                             -->
-                            <div class="grid models text-center">
-                            	
-                                <div th:each="u : ${ugarage}" class="grid-item model-item transition" th:classappend="${u.mname} ? ${u.mname}" >
-                                    <img alt="????" th:src="@{'assets/images/garage/'+${u.mname}+'_'+${u.coloption}+'_'+${u.woption}+'.png'}">
-									<a th:href="@{garagedetail(gid=${u.gid})}" class="btn btn-default m-top-20">View Details<i class="fa fa-long-arrow-right"></i></a>
-                   			
-                                </div><!-- End off grid item -->
-
-	
-                                
-                            </div>
-							    <div class="grid models text-center">
-                            	
-                                <div th:each="u : ${ugarage}" class="grid-item model-item transition" th:classappend="${u.mname} ? ${u.mname}" >
-                                    <img alt="????" th:src="@{'assets/images/garage/'+${u.mname}+'_'+${u.coloption}+'_'+${u.woption}+'.png'}">
-									<a th:href="@{garagedetail(gid=${u.gid})}" class="btn btn-default m-top-20">View Details<i class="fa fa-long-arrow-right"></i></a>
-                   			
-                                </div><!-- End off grid item -->
-
-	
-                                
-                            </div>
-                            <div style="clear: both;"></div>
-
-                        </div>
-                    </div>
-                </div><!-- Portfolio container end -->
-            </section><!-- End off portfolio section -->
-
+<div th:if="${session.loginusers != null}">
+	<div th:if="${session.loginusers.uid == uid}">
+		<!--Portfolio Section-->
+		<section id="gallery" class="gallery margin-top-120 bg-white">
+			<!-- Portfolio container-->
+			<div class="container">
+				<div class="row">
+					<div class="main-gallery main-model roomy-80">
+						<div class="col-md-12 m-bottom-60">
+							<div class="filters-button-group sm-text-center">
+								<button class="button is-checked" data-filter="*">View all</button>
+								<button class="button" data-filter=".S">MODEL S</button>
+								<button class="button" data-filter=".X">MODEL X</button>
+								<button class="button" data-filter=".Y">MODEL Y</button>
+							</div>
+						</div>
+						<div style="clear: both;"></div>
+					
+						<!--
+						 각각의 codeno 이미지를 each로 돌리고
+						 view detail을 누르면 gid의 garagedetail 페이지로 이동
+						 -->
+					                    
+						<div class="grid models text-center">
+							
+							<div th:each="u : ${ugarage}" class="grid-item model-item transition" th:classappend="${u.mname} ? ${u.mname}" >
+								<img alt="????" th:src="@{'assets/images/garage/'+${u.mname}+'_'+${u.coloption}+'_'+${u.woption}+'.png'}">
+								<a th:href="@{garagedetail(gid=${u.gid})}" class="btn btn-default m-top-20">View Details<i class="fa fa-long-arrow-right"></i></a>
+							          			
+							</div><!-- End off grid item -->
+						
+						</div>
+						
+						<div class="grid models text-center">
+						                   	
+							<div th:each="u : ${ugarage}" class="grid-item model-item transition" th:classappend="${u.mname} ? ${u.mname}" >
+								<img alt="????" th:src="@{'assets/images/garage/'+${u.mname}+'_'+${u.coloption}+'_'+${u.woption}+'.png'}">
+								<a th:href="@{garagedetail(gid=${u.gid})}" class="btn btn-default m-top-20">View Details<i class="fa fa-long-arrow-right"></i></a>
+							          			
+							</div><!-- End off grid item -->
+						
+						</div>
+						
+						<div style="clear: both;"></div>
+					</div>
+				</div>
+			</div><!-- Portfolio container end -->
+		</section><!-- End off portfolio section -->
+	</div>
+	<div id="div-top" class="container-fluid" th:unless="${session.loginusers.uid == uid}">
+		<h1 class="text-black text-center">잘못 된 경로입니다.</h1>
+	</div>
+</div>
+<div id="div-top" class="container-fluid" th:unless="${session.loginusers != null}">
+	<h1 class="text-black text-center">잘못 된 경로입니다.</h1>
+</div>
+</html>
