--- a/multisla/src/main/resources/templates/garage/garagedetail.html
+++ b/multisla/src/main/resources/templates/garage/garagedetail.html
@@ -1,3 +1,4 @@
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <meta charset="utf-8">
 <style>
 .option {
@@ -11,115 +12,111 @@ margin:auto;
 </style>
 
 
-
-            <!--Model Details Section-->
-            <section id="m_details" class="m_details roomy-100 fix">
-                <div class="container">
-                    <div class="row">
-                        <div class="main_details">
-                            <div class="col-md-6">
-                                <div class="m_details_img">
-                                     <img alt="????" th:src="@{'assets/images/garage/'+${ugarage.mname}+'_'+${ugarage.coloption}+'_'+${ugarage.woption}+'.png'}">
-                                     <!--  img alt="????" th:src="@{'assets/images/option/'+${ugarage.ioption}+'.jpg'}"-->                                   
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="m_details_content m-bottom-40">
-
-                                    <h2 th:text="${ugarage.mname}">MNAME</h2>
-                                
-                                </div>
-                               
-                                <hr>
-                                
-                                
-                                <div class="person_details m-top-40">
-                                    <div class="row">
-                                      	<div class="col-xs-3 text-center"> 
-                                        	<h4 >COLOR</h4>                                      
-                                            <img class="option" alt="?" th:src="@{'assets/images/option/'+${ugarage.colid} +'.png'}">     
-                                            <p th:text="${ugarage.coloption}"></p> 
-                                        </div>
-                                       
-                                        <div class="col-xs-3 text-center">   
-                                         	<h4 >WHEEL</h4>                           
-                                            <img class="option" alt="?" th:src="@{'assets/images/option/'+${ugarage.wid} +'.png'}">
-                                            <p th:text="${ugarage.woption}+' inch'"></p> 
-                                        </div>
-                                        
-                                       
-                                       
-                                        <div class="col-xs-3 text-center">   
-                                         	<h4>INTERIOR</h4>                                      
-                                            <img class="option" alt="?" th:src="@{'assets/images/option/'+${ugarage.iid} +'.png'}">  
-                                            <p th:text="${ugarage.ioption}"></p>        
-                                        </div>
-                                      </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="m_details_content m-bottom-40">
-                                </div>
-                               
-                                <hr />
-                                
-                                
-                                <div class="person_details m-top-40">
-                                    <div class="row">
-                                    	
-                                        <div class="col-md-6 text-left"> 
-                                        	                                     
-                                            <h4 data-th-text="'견적가 : &#8361;'+${#numbers.formatInteger(ugarage.price, 0, 'COMMA')}">  </h4>   
-                                            
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                             <div class="col-md-6">
-                                <div class="m_details_content m-bottom-40">
-       							
-                                    
-                                
-                                </div>
-                               
-                                
-                                
-                                
-                                <div class="person_details m-top-40">
-                                    <div class="row">
-                               
-                                    </div>
-                                </div>
-                            </div>
-                      
-                            
-                      		
-
-
-                            <div class="col-md-6">
-                                <div class="skill_bar m-top-70">    
-                                    <div class="row">
-			                            <div class="col-md-6">
-			                                <div class="col-md-6 btn" th:if="${ugarage.corder}==false">
-												<a type="button" href="#" th:href="@{orders(gid=${ugarage.gid})}" class="btn btn-primary">주문하러 가기</a>
-												<a type="button" href="#" th:href="@{modifygarage(gid=${ugarage.gid}, uid=${ugarage.uid})}" class="btn btn-default">수정하기</a>
-												<a type="button" href="#" th:href="@{delete(gid=${ugarage.gid})}" class="btn btn-default">삭제</a>
-			                      			</div>
-											<div class="col-md-6 btn" th:unless="${ugarage.corder}==false">							
-												<a type="button" th:href="@{ordersdetail(codeno=${ugarage.codeno})}" class="btn btn-default">주문상세</a> 
-			                      			</div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div><!-- End off row -->
-                </div> <!-- End off container -->
-            </section> <!-- End off Model Details Section -->   
-
-
+<div th:if="${session.loginusers != null}">
+	<div th:if="${session.loginusers.uid == ugarage.uid}">
+		<!--Model Details Section-->
+		<section id="m_details" class="m_details roomy-100 fix">
+			<div class="container">
+				<div class="row">
+					<div class="main_details">
+						<div class="col-md-6">
+							<div class="m_details_img">
+								<img alt="????" th:src="@{'assets/images/garage/'+${ugarage.mname}+'_'+${ugarage.coloption}+'_'+${ugarage.woption}+'.png'}">
+								<!--  img alt="????" th:src="@{'assets/images/option/'+${ugarage.ioption}+'.jpg'}"-->                                   
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="m_details_content m-bottom-40">
+							
+								<h2 th:text="${ugarage.mname}">MNAME</h2>
+							                     
+							</div>
+						                    
+							<hr>
+						                      
+							<div class="person_details m-top-40">
+								<div class="row">
+									<div class="col-xs-3 text-center"> 
+										<h4 >COLOR</h4>                                      
+										<img class="option" alt="?" th:src="@{'assets/images/option/'+${ugarage.colid} +'.png'}">     
+										<p th:text="${ugarage.coloption}"></p> 
+									</div>
+		
+									<div class="col-xs-3 text-center">   
+										<h4 >WHEEL</h4>                           
+										<img class="option" alt="?" th:src="@{'assets/images/option/'+${ugarage.wid} +'.png'}">
+										<p th:text="${ugarage.woption}+' inch'"></p> 
+									</div>
+		
+									<div class="col-xs-3 text-center">   
+										<h4>INTERIOR</h4>                                      
+										<img class="option" alt="?" th:src="@{'assets/images/option/'+${ugarage.iid} +'.png'}">  
+										<p th:text="${ugarage.ioption}"></p>        
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6">
+						<div class="m_details_content m-bottom-40"></div>
+					                    
+						<hr />
+					                     
+						<div class="person_details m-top-40">
+							<div class="row">
+							                         	
+								<div class="col-md-6 text-left"> 
+								                             	                                     
+									<h4 data-th-text="'견적가 : &#8361;'+${#numbers.formatInteger(ugarage.price, 0, 'COMMA')}">  </h4>   
+								                                 
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6">
+						<div class="m_details_content m-bottom-40"></div>
+					                    
+					                     
+					                     
+					                     
+						<div class="person_details m-top-40">
+							<div class="row"></div>
+						</div>
+					</div>
+				           
+				                 
+				           		
+				
+				
+					<div class="col-md-6">
+						<div class="skill_bar m-top-70">    
+							<div class="row">
+								<div class="col-md-6">
+									<div class="col-md-6 btn" th:if="${ugarage.corder}==false">
+										<a type="button" href="#" th:href="@{orders(gid=${ugarage.gid})}" class="btn btn-primary">주문하러 가기</a>
+										<a type="button" href="#" th:href="@{modifygarage(gid=${ugarage.gid}, uid=${ugarage.uid})}" class="btn btn-default">수정하기</a>
+										<a type="button" href="#" th:href="@{delete(gid=${ugarage.gid})}" class="btn btn-default">삭제</a>
+									</div>
+									<div class="col-md-6 btn" th:unless="${ugarage.corder}==false">							
+										<a type="button" th:href="@{ordersdetail(codeno=${ugarage.codeno})}" class="btn btn-default">주문상세</a> 
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				
+				</div>
+			</div><!-- End off row -->
+		</section> <!-- End off Model Details Section -->
+	</div>
+	<div id="div-top" class="container-fluid" th:unless="${session.loginusers.uid == ugarage.uid}">
+		<h1 class="text-black text-center">잘못 된 경로입니다.</h1>
+	</div>
+</div>
+<div id="div-top" class="container-fluid" th:unless="${session.loginusers != null}">
+	<h1 class="text-black text-center">잘못 된 경로입니다.</h1>
+</div>
+</html>
                                 	
                                 	
                             
