--- a/multisla/src/main/resources/templates/index.html
+++ b/multisla/src/main/resources/templates/index.html
@@ -97,7 +97,7 @@
                             <li class="dropdown sm-m-top-20">
                                 <a href="#" th:href="@{garage(uid=${session.loginusers.uid})}" class="dropdown-toggle" data-toggle="dropdown">
                                     <i class="fa fa-shopping-bag"></i>
-                                    <span class="badge" th:each="g : ${cartlist}" th:if="${session.loginusers.uid == g.uid}" th:text="${cartlist.size}">2</span>
+                                    <span class="badge" th:each="g : ${cartlist}" th:if="${session.loginusers.uid == g.uid}" th:text="${cartlist.size - 1}">0</span>
                                 </a>
                                 <ul class="dropdown-menu cart-list">
                                     <li th:each="g : ${cartlist}" th:if="${session.loginusers.uid == g.uid}">
