--- a/multisla/src/main/resources/templates/garage/garage.html
+++ b/multisla/src/main/resources/templates/garage/garage.html
@@ -12,7 +12,11 @@
 			<div class="container">
 				<div class="row">
 					<div class="main-gallery main-model roomy-80">
-						<div class="col-md-12 m-bottom-60">
+						<div class="text-center">
+							<h1>내 차고</h1>
+							<p>내가 디자인한 나만의 멀티슬라 자동차를 확인할 수 있습니다.</p>
+						</div>						
+						<div class="col-md-12 m-bottom-60 m-top-60">
 							<div class="filters-button-group sm-text-center">
 								<button class="button is-checked" data-filter="*">View all</button>
 								<button class="button" data-filter=".S">MODEL S</button>
